# interpolate

./: CMakeLists.txt  README.md  lint.sh
include/: Compile.h  Interpolate.h
pass/: CMakeLists.txt  Compile.cpp  Interpolate.cpp  Pass.cpp  cc.in
runtime/: modpow.c
tests/: CMakeLists.txt  lit.cfg  lit.site.cfg.in  sbox.c
